--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,12 +44,17 @@
                                                placeholder="作者">
                                     </div>
                                     <div class="form-group mb-3">
-                                        <label for="example-password">Password</label>
+                                        <label for="javapath">Java文件输出路径</label>
+                                        <input type="text" id="javapath" class="form-control"
+                                               value="password">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="example-password">Java文件输出路径</label>
                                         <input type="password" id="example-password" class="form-control"
                                                value="password">
                                     </div>
                                     <div class="form-group mb-3">
-                                        <label for="example-palaceholder">Placeholder</label>
+                                        <label for="example-palaceholder">模板文件输出路径</label>
                                         <input type="text" id="example-palaceholder" class="form-control"
                                                placeholder="placeholder">
                                     </div>
