--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 
     <!--    <link href="bootstrap/css/icons.min.css" rel="stylesheet" type="text/css"/>-->
     <link href="bootstrap/css/app.min.css" rel="stylesheet" type="text/css"/>
+    <link href="bootstrap/css/message.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -50,6 +51,12 @@
                                         <input type="text" id="author" name="author" class="form-control"
                                                value="${sys.author!''}"
                                                placeholder="作者">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="author">公司名</label>
+                                        <input type="text" id="company" readonly name="company" class="form-control"
+                                               value="${sys.company!''}"
+                                               placeholder="公司名">
                                     </div>
                                     <div class="form-group mb-3">
                                         <label for="author">实例名称</label>
@@ -125,10 +132,10 @@
             Ajax.post("/submit", $('#form').serialize(), Code.suc, Code.err);
         },
         suc: function (res) {
-            console.info(res);
+            Msg.isSuc(res.message,res.result);
         },
         err: function (XMLHttpRequest) {
-            console.info(XMLHttpRequest);
+            Msg.error("失败请求");
         }
     }
 </script>
