完成代码生成器

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -265,7 +265,7 @@
             });
         },
         under2camel: function (s) {
-            var separator = "_";
+            var separator = /_/g;
             var under = "";
             s = s.toLowerCase().replace(separator, " ");
             var sarr = s.split(" ");
