完成代码生成器

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <h2><a href="#" class="text-info"><code>Jiopeel.com</code></a>&nbsp;&nbsp;代码生成器</h2>
+                        <h2><a href="#" class="text-info"><code>${sys.company!''}</code></a>&nbsp;&nbsp;代码生成器</h2>
                         <h4><code>Design by lyc</code></h4>
                         <p class="text-muted">
                             简介： 你可以在此处生成代码
