--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
                                                     <span>Bean</span>
                                                     <div class="close" style="opacity: 1">
                                                         <input type="checkbox" id="bean" onchange="Code.check(this)"
-                                                               checked value="1" name="bean" data-switch="primary">
+                                                               checked value="1"  name="bean" data-switch="primary">
                                                         <label for="bean" data-on-label="是" data-off-label="否"
                                                                class="mb-0 d-block"></label>
                                                     </div>
@@ -87,7 +87,7 @@
                                                     <span>模板</span>
                                                     <div class="close" style="opacity: 1">
                                                         <input type="checkbox" id="view" onchange="Code.check(this)"
-                                                               checked value="1" name="view" data-switch="warning">
+                                                                name="view" data-switch="warning">
                                                         <label for="view" data-on-label="是" data-off-label="否"
                                                                class="mb-0 d-block"></label>
                                                     </div>
@@ -148,7 +148,7 @@
                                                    value="${sys.logicPath!''}">
                                         </div>
                                     </div>
-                                    <div class="form-group mb-3">
+                                    <div class="form-group mb-3" style="display: none">
                                         <label for="viewPath">
                                             <span class="badge badge-warning-lighten badge-pill">模板</span>
                                             文件输出路径</label>
